<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_add"
                android:icon="@drawable/baseline_add_24"
                android:title="@string/add"/>
        <item
                android:id="@+id/nav_sub"
                android:icon="@drawable/baseline_exposure_neg_1_24"
                android:title="@string/subtraction"/>
        <item
                android:id="@+id/nav_mult"
                android:icon="@drawable/baseline_close_24"
                android:title="@string/multiplication"/>
        <item
                android:id="@+id/nav_div"
                android:icon="@drawable/baseline_horizontal_rule_24"
                android:title="@string/divition"/>
    </group>
</menu>