<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:padding="20dp">

    <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addition_fragment"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" tools:layout_editor_absoluteY="20dp"
            tools:ignore="MissingConstraints"/>

    <TextView
            android:id="@+id/num1"
            android:text="@string/num_1"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="132dp"
            app:layout_constraintHorizontal_bias="0.089"/>
    <EditText
            android:id="@+id/editNum1"
            android:layout_width="100dp" android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="108dp" android:layout_marginEnd="164dp"/>
    <TextView
            android:id="@+id/num2"
            android:text="@string/num_2"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="248dp"
            app:layout_constraintHorizontal_bias="0.117"/>
    <EditText
            android:id="@+id/editNum2"
            android:layout_width="100dp" android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="232dp" android:layout_marginEnd="164dp"/>

    <Button
            android:id="@+id/btnAdd"
            android:text="@string/btnadd"
            android:layout_width="152dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.479"
            app:layout_constraintVertical_bias="0.589"/>
    <TextView
            android:id="@+id/lblresult"
            android:text="@string/result"
            android:layout_width="70dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_height="25dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.169" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.762"/>
    <TextView
            android:id="@+id/result"
            android:layout_width="100dp" android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.579" app:layout_constraintVertical_bias="0.759"/>
</androidx.constraintlayout.widget.ConstraintLayout>